2005-06-04  H.J. Lu  <hongjiu.lu@intel.com>

	* dwarf2.c (comp_unit): Fix a typo in comment.

2005-06-03  Jan-Benedict Glaw  <jbglaw@lug-owl.de>

	* elf32-vax.c (rtype_to_howto): Remove PARAMS.
	(reloc_type_lookup): Dito.
	(elf_vax_discard_copies): Dito.
	(elf_vax_instantiate_got_entries): Dito.
	(elf_vax_link_hash_traverse): Dito.
	(elf_vax_link_hash_newfunc): Dito.
	(elf_vax_link_hash_table_create): Dito.
	(elf32_vax_set_private_flags): Dito.
	(elf32_vax_merge_private_bfd_data): Dito.
	(elf32_vax_print_private_bfd_data): Dito.
	(elf_vax_check_relocs): Dito.
	(elf_vax_gc_mark_hook): Dito.
	(elf_vax_gc_sweep_hook): Dito.
	(elf_vax_size_dynamic_sections): Dito.
	(elf_vax_discard_copies): Dito.
	(elf_vax_instantiate_got_entries): Dito.
	(elf_vax_relocate_section): Dito.
	(elf_vax_finish_dynamic_symbol): Dito.
	(elf_vax_finish_dynamic_sections): Dito.
	(elf_vax_hash_table): Break-up of line isn't needed.
	(elf_vax_check_relocs): Remove leading whitespace
	(elf_vax_relocate_section): Remove redundant whitespace
	(elf_vax_link_hash_newfunc): Don't cast NULL.
	(elf_vax_link_hash_table_create): Dito.
	* cpu-vax.c (bfd_vax_arch) Remove a trailing space.

2005-06-03  Alan Modra  <amodra@bigpond.net.au>

	PR 568
	* configure.in: Bump version
	* configure: Regenerate.
	* elflink.c (elf_link_input_bfd): Use einfo linker callback to print
	discarded section sym refs and kill linker output.
	* simple.c (simple_dummy_einfo): New function.
	(bfd_simple_get_relocated_section_contents): Init callbacks.einfo.

	* elf32-i386.c (elf_i386_relocate_section): Handle zero symndx
	for all reloc types.

2005-06-02  Alan Modra  <amodra@bigpond.net.au>

	* elf64-ppc.c (add_symbol_adjust): Set sym visibility to most
	restrictive of func code and func descr for undefined syms as well
	as defined.

2005-05-31  Jim Blandy  <jimb@redhat.com>

	* Makefile.am: Regenerate dependencies with 'make dep-am'.
	* Makefile.in: Regenerate.

2005-05-31  Richard Henderson  <rth@redhat.com>
