@@ -1,3 +1,8 @@
+2005-06-06  Alan Modra  <amodra@bigpond.net.au>
+
+	* emultempl/ppc64elf.em (ppc_before_allocation): Always run
+	ppc64_elf_edit_opd.
+
 2005-06-05  H.J. Lu  <hongjiu.lu@intel.com>
 
 	* ldexp.c (exp_mark_used_section): Set SEC_KEEP on current
